# Test2

./: .gitignore  Bachelor.txt  CMakeLists.txt  README.md  Task.txt  requirements.txt  setup.py
cpp/include/: chunk.hpp  config.hpp  lod.hpp  noise.hpp  octree.hpp  terrain.hpp  voxel.hpp  wfc.hpp  world.hpp
cpp/src/: bindings.cpp  chunk.cpp  lod.cpp  noise.cpp  octree.cpp  terrain.cpp  wfc.cpp  world.cpp
python/: __init__.py  camera.py  main.py  renderer.py  single_chunk_test.py  single_voxel_test.py
tests/: __init__.py
tests/cpp/: test_main.cpp
tests/python/: __init__.py  test_camera.py  test_renderer.py  test_voxel_engine.py
